--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" />
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico.png" />
 
     <!-- Manifest for metadata -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Miviz Architects" />
-    <meta property="og:description" content="A brief description of your website suitable for social media sharing." />
+    <meta property="og:description" content="MIVIZ Architects: Crafting Personalized, Minimalist Homes in Pune. Our innovative designs blend aesthetics with functionality, creating unique living spaces tailored to your lifestyle. Experience exceptional architectural services, from concept to completion." />
     <meta property="og:image" content="%PUBLIC_URL%/image.jpg" /> <!-- Replace with your actual image -->
     <meta property="og:url" content="https://mivizarchitects.com" />
 
