made some new changes

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,10 @@
     <meta property="og:title" content="Miviz Architects" />
     <meta property="og:description" content="MIVIZ Architects: Crafting Personalized, Minimalist Homes in Pune. Our innovative designs blend aesthetics with functionality, creating unique living spaces tailored to your lifestyle. Experience exceptional architectural services, from concept to completion." />
     <meta property="og:image" content="%PUBLIC_URL%/image.jpg" /> <!-- Replace with your actual image -->
-    <meta property="og:url" content="https://mivizarchitects.com" />
+    <meta property="og:url" content="https://mivizarchitects.in" />
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://mivizarchitects.com" />
+    <link rel="canonical" href="https://mivizarchitects.in" />
 </head>
 
 <body>
